# EIMHost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  patch.js
.github/workflows/: release.yml
src/: Main.cpp  PluginWindow.h  audio_output.h  components.h  main.cpp  plugin_host.h  plugin_window.h  utils.h
